--- a/.gitignore
+++ b/.gitignore
@@ -1,24 +1,4 @@
-# Logs
-logs
-*.log
-npm-debug.log*
-yarn-debug.log*
-yarn-error.log*
-pnpm-debug.log*
-lerna-debug.log*
-
-frontPrject/node_modules
-/frontPrject/dist
-/frontPrject/dist-ssr
-*.local
-
-# Editor directories and files
-.vscode/*
-!.vscode/extensions.json
-.idea
-.DS_Store
-*.suo
-*.ntvs*
-*.njsproj
-*.sln
-*.sw?
+/frontProject/node_modules
+/frontProject/dist
+/frontProject/dist-ssr
+/frontProject/.vscode/*
