--- a/server/package.json
+++ b/server/package.json
@@ -1,10 +1,10 @@
 {
-  "name": "non-overlay-publishing",
+  "name": "server",
   "version": "1.0.0",
-  "description": "模拟非覆盖式发布流程",
+  "description": "",
   "main": "index.js",
   "scripts": {
-    "push": "node ./script/push.js"
+    "test": "echo \"Error: no test specified\" && exit 1"
   },
   "keywords": [],
   "author": "",
